ingress/logs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logs-ingress
  namespace: elk
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.sw24.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
