ingress/swapp-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swapp-dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev.sw24.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: swapp-dev-service
            port:
              number: 80
