ingress/swapp-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swapp-prod-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sw24.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: swapp-prod-service
            port:
              number: 80
